# webr

./: Cargo.toml  README.md  index.html  schema.json
src/: book_collection.graphql  lib.rs
