[package]
name = "webr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
graphql_client = { version = "0.11.0", features = ["reqwest"] }
serde = { version = "1.0.67", features = ["derive"] }
wasm-bindgen = "0.2"
reqwest = {version="0.11.1", features = ["json"]}
log = "^0.4"
wasm-bindgen-futures = "0.4.18"



[dependencies.web-sys]
version = "0.3.6"
features = [
    "console",
    "Document",
    "Element",
    "EventTarget",
    "Node",
    "HtmlBodyElement",
    "HtmlDocument",
    "HtmlElement",
    "Window",
]
